--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="password_summary">How do you log in?</string>
     <string name="status_update">Status Update</string>
 
+    <string name="intervalo">Refresh Interval</string>
+    <string name="interval_summary">How frequently should data refresh?</string>
+    <string name="title_activity_main">MainActivity</string>
+
+
 </resources>
